--- a/app/views/auctions/index.html.haml
+++ b/app/views/auctions/index.html.haml
@@ -1,8 +1,8 @@
 %p#notice= notice
-%h1 Auctions
-%table
+%h1.text-center Auctions
+%table.table.table-hover
   %thead
-    %tr
+    %tr.active
       %th Name
       %th Image
       %th Start price
