--- a/app/views/auctions/show.html.haml
+++ b/app/views/auctions/show.html.haml
@@ -22,4 +22,4 @@
   = @auction.history
 = link_to 'Edit', edit_auction_path(@auction)
 |
-\#{link_to 'Back', auctions_path}
+\#{link_to 'Back', root_path}
