--- a/app/views/auctions/index.html.haml
+++ b/app/views/auctions/index.html.haml
@@ -15,7 +15,8 @@
     - @auctions.each do |auction|
       %tr
         %td= auction.name
-        %td= auction.image
+        %td= auction.image_1
+        %td= auction.image_2
         %td= auction.start_price
         %td= auction.bet
         %td= auction.current_price
