Show auction action (#19)
* #19: Show action

* #19: Comment bot

* #19: Rework auction bot

* #19: Add styles

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,17 @@
  */
  @import 'bootstrap-sprockets';
  @import 'bootstrap';
+
+th, td {
+  &.thin-column {
+    width: 1%;
+  }
+}
+
+.mt-20 {
+  margin-top: 20px;
+}
+
+.mb-10 {
+  margin-bottom: 10px;
+}
