--- a/app/views/auctions/_form.html.haml
+++ b/app/views/auctions/_form.html.haml
@@ -20,7 +20,7 @@
     = f.label :start_price, class:'control-label'
     = f.text_field :start_price, class: 'form-control'
   .form-group
-    = f.label :bet, class:'control-label'
-    = f.text_field :bet, class: 'form-control'
+    = f.label :bet_price, class:'control-label'
+    = f.text_field :bet_price, class: 'form-control'
   .actions
     = f.submit class: 'btn btn-primary'
