--- a/app/views/auctions/index.html.haml
+++ b/app/views/auctions/index.html.haml
@@ -1,29 +1,30 @@
-%p#notice= notice
-%h1.text-center Auctions
-%table.table.table-hover
+%h1.text-center Auction Lots
+.row
+  .col-xs-12.mt-20
+    .title-control.pull-right.mb-10
+      = link_to 'New Auction', new_auction_path, class: 'btn btn-default'
+
+%table.table.table-striped.table-bordered.table-hover
   %thead
     %tr.active
       %th Name
-      %th Image
       %th Start price
-      %th Bet
+      %th Bet Price
       %th Current price
-      %th Participants
-      %th History
-      %th{:colspan => "3"}
+      %th.thin-column= 'Actions'
   %tbody
     - @auctions.each do |auction|
       %tr
-        %td= auction.name
-        %td= auction.image_1
-        %td= auction.image_2
+        %td= link_to auction.name, auction
         %td= auction.start_price
-        %td= auction.bet
+        %td= auction.bet_price
         %td= auction.current_price
-        %td= auction.participants
-        %td= auction.history
-        %td= link_to 'Show', auction
-        %td= link_to 'Edit', edit_auction_path(auction)
-        %td= link_to 'Destroy', auction, method: :delete, data: { confirm: 'Are you sure?' }
-%br/
-= link_to 'New Auction', new_auction_path
+        %td.text-center
+          .btn-group.btn-group-xs{ role: 'group' }
+            %button.btn.btn-default.dropdown-toggle{ data: { toggle: 'dropdown' } }
+              = 'Select'
+              %span.caret
+            %ul.dropdown-menu{ role: 'menu' }
+              %li= link_to 'Edit', edit_auction_path(auction)
+              %li= link_to 'Destroy', auction, method: :delete, class: 'bg-danger',
+                data: { confirm: 'Are you sure?' }
