--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,6 +6,32 @@
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   %body
+    %nav.navbar.navbar-default.navbar-static-top
+      .container
+        .pull-left
+        .navbar-header
+          %a.navbar-brand{ href: root_path }= 'Skay BU'
+        - if current_user
+          %ul.nav.navbar-nav
+            %li= link_to 'Lots', root_path
+            %li= link_to 'Black List'
+
+        %ul.nav.navbar-nav.navbar-right
+          - if current_user
+            %li.dropdown
+              %a.dropdown-toggle{'data-toggle': 'dropdown', href: '#'}
+                = current_user.email
+                %b.caret
+              %ul.dropdown-menu
+                %li= link_to 'Log out', destroy_user_session_path, method: :delete
+          - else
+            %li= link_to 'Log in', new_user_session_path
     .container
+      - if notice
+        %p.alert.alert-info= notice
+      - if alert
+        %p.alert.alert-danger= alert
+      - if flash[:error]
+        %p.alert.alert-danger= flash[:error]
       .row
         = yield
