Add ability to ban users (#6)
* #6: Release of ban

* #6: Little fix

--- a/app/views/auctions/index.html.haml
+++ b/app/views/auctions/index.html.haml
@@ -6,7 +6,7 @@
 
 %table.table.table-striped.table-bordered.table-hover
   %thead
-    %tr.active
+    %tr.info
       %th Name
       %th Start price
       %th Bet Price
