--- a/app/views/auctions/_form.html.haml
+++ b/app/views/auctions/_form.html.haml
@@ -11,6 +11,9 @@
     = f.label :name, class:'control-label'
     = f.text_field :name, class: 'form-control'
   .form-group
+    = f.label :description, class:'control-label'
+    = f.text_area :description, class: 'form-control'
+  .form-group
     = f.label :image_1, class:'control-label'
     = f.file_field :image_1, class: 'form-control'
   .form-group
@@ -18,9 +21,15 @@
     = f.file_field :image_2, class: 'form-control'
   .form-group
     = f.label :start_price, class:'control-label'
-    = f.text_field :start_price, class: 'form-control'
+    = f.number_field :start_price, class: 'form-control', min: '0'
   .form-group
     = f.label :bet_price, class:'control-label'
-    = f.text_field :bet_price, class: 'form-control'
+    = f.number_field :bet_price, class: 'form-control', min: '0'
+  .form-group
+    = f.label :end_price, class:'control-label'
+    = f.number_field :end_price, class: 'form-control', min: '0'
+  .form-group
+    = f.label :auction_time, class:'control-label'
+    = f.number_field :auction_time, class: 'form-control', min: '0', placeholder: 'Введите время в минутах'
   .actions
     = f.submit class: 'btn btn-primary'
