--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -13,6 +13,9 @@
   .form-group
     = f.label :password_confirmation, class:'control-label'
     = f.password_field :password_confirmation, autocomplete: "off", class: 'form-control'
+  .form-group
+    = f.label :registration_code, class:'control-label'
+    = f.password_field :registration_code, autocomplete: "off", class: 'form-control'
   .actions
     = f.submit "Sign up", class: 'btn btn-primary'
 = render "devise/shared/links"
