--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -26,6 +26,7 @@
                 %li= link_to 'Log out', destroy_user_session_path, method: :delete
           - else
             %li= link_to 'Log in', new_user_session_path
+            %li= link_to 'Sign up', new_user_registration_path
     .container
       - if notice
         %p.alert.alert-info= notice
