--- a/app/views/auctions/_form.html.haml
+++ b/app/views/auctions/_form.html.haml
@@ -33,3 +33,4 @@
     = f.number_field :auction_time, class: 'form-control', min: '0', placeholder: 'Введите время в минутах'
   .actions
     = f.submit class: 'btn btn-primary'
+    = link_to 'Back', root_path, class: 'btn btn-default'
