--- a/app/views/auctions/show.html.haml
+++ b/app/views/auctions/show.html.haml
@@ -6,7 +6,7 @@
           %h4.panel-title
             %a{'data-parent' => '#accordion', 'data-toggle' => 'collapse', :href => '#lot'}
               Auction Lot
-        #lot.panel-collapse.collapse.in
+        #lot.panel-collapse.collapse
           .panel-body
             %p
               %strong Name:
