--- a/app/views/auctions/index.html.haml
+++ b/app/views/auctions/index.html.haml
@@ -3,28 +3,28 @@
   .col-xs-12.mt-20
     .title-control.pull-right.mb-10
       = link_to 'New Auction', new_auction_path, class: 'btn btn-default'
-
-%table.table.table-striped.table-bordered.table-hover
-  %thead
-    %tr.info
-      %th Name
-      %th Start price
-      %th Bet Price
-      %th Current price
-      %th.thin-column= 'Actions'
-  %tbody
-    - @auctions.each do |auction|
-      %tr
-        %td= link_to auction.name, auction
-        %td= auction.start_price
-        %td= auction.bet_price
-        %td= auction.current_price
-        %td.text-center
-          .btn-group.btn-group-xs{ role: 'group' }
-            %button.btn.btn-default.dropdown-toggle{ data: { toggle: 'dropdown' } }
-              = 'Select'
-              %span.caret
-            %ul.dropdown-menu{ role: 'menu' }
-              %li= link_to 'Edit', edit_auction_path(auction)
-              %li= link_to 'Destroy', auction, method: :delete, class: 'bg-danger',
-                data: { confirm: 'Are you sure?' }
+.table-responsive
+  %table.table.table-striped.table-bordered.table-hover
+    %thead
+      %tr.info
+        %th Name
+        %th Start price
+        %th Bet Price
+        %th Current price
+        %th.thin-column= 'Actions'
+    %tbody
+      - @auctions.each do |auction|
+        %tr
+          %td= link_to auction.name, auction
+          %td= auction.start_price
+          %td= auction.bet_price
+          %td= auction.current_price
+          %td.text-center
+            .btn-group.btn-group-xs{ role: 'group' }
+              %button.btn.btn-default.dropdown-toggle{ data: { toggle: 'dropdown' } }
+                = 'Select'
+                %span.caret
+              %ul.dropdown-menu{ role: 'menu' }
+                %li= link_to 'Edit', edit_auction_path(auction)
+                %li= link_to 'Destroy', auction, method: :delete, class: 'bg-danger',
+                  data: { confirm: 'Are you sure?' }
