--- a/app/views/auctions/index.html.haml
+++ b/app/views/auctions/index.html.haml
@@ -11,20 +11,18 @@
         %th Start price
         %th Bet Price
         %th Current price
-        %th.thin-column= 'Actions'
+        %th.text-center.thin-column{colspan: 2}= 'Actions'
     %tbody
       - @auctions.each do |auction|
         %tr
-          %td= link_to auction.name, auction
+          %td
+            %h5
+              %strong= link_to auction.name, auction
           %td= auction.start_price
           %td= auction.bet_price
           %td= auction.current_price
           %td.text-center
-            .btn-group.btn-group-xs{ role: 'group' }
-              %button.btn.btn-default.dropdown-toggle{ data: { toggle: 'dropdown' } }
-                = 'Select'
-                %span.caret
-              %ul.dropdown-menu{ role: 'menu' }
-                %li= link_to 'Edit', edit_auction_path(auction)
-                %li= link_to 'Destroy', auction, method: :delete, class: 'bg-danger',
-                  data: { confirm: 'Are you sure?' }
+            = link_to 'Edit', edit_auction_path(auction), class: 'btn btn-default'
+          %td.text-center
+            = link_to 'Destroy', auction, method: :delete, class: 'btn btn-danger',
+              data: { confirm: 'Are you sure?' }
