add verify for auction

--- a/app/views/auctions/show.html.haml
+++ b/app/views/auctions/show.html.haml
@@ -26,6 +26,9 @@
             %p
               %strong Current price:
               = @auction.current_price
+            %p
+              %strong Active:
+              = @auction.active ? 'Yes' : 'NO'
 
             = link_to 'Edit', edit_auction_path(@auction), class: 'btn btn-default'
             / = link_to 'Back', root_path, class: 'btn btn-default'
@@ -70,5 +73,5 @@
                   поднял ставку на
                   %strong= "#{event['bet']}"
     .pull-right
-      = link_to 'Start Auction', start_auction_path, class: 'btn btn-primary'
-      = link_to 'Stop Auction', stop_auction_path, class: 'btn btn-danger'
+      = link_to 'Start Auction', start_auction_path(@auction), class: 'btn btn-primary'
+      = link_to 'Stop Auction', stop_auction_path(@auction), class: 'btn btn-danger'
