--- a/app/views/auctions/show.html.haml
+++ b/app/views/auctions/show.html.haml
@@ -73,5 +73,6 @@
                   поднял ставку на
                   %strong= "#{event['bet']}"
     .pull-right
+      = link_to 'Back', root_path, class: 'btn btn-default'
       = link_to 'Start Auction', start_auction_path(@auction), class: 'btn btn-primary'
       = link_to 'Stop Auction', stop_auction_path(@auction), class: 'btn btn-danger'
