#28: Normal end time (#28)

--- a/app/views/auctions/_form.html.haml
+++ b/app/views/auctions/_form.html.haml
@@ -30,7 +30,8 @@
     = f.number_field :end_price, class: 'form-control', min: '0'
   .form-group
     = f.label :auction_time, class:'control-label'
-    = f.number_field :auction_time, class: 'form-control', min: '0', placeholder: 'Введите время в минутах'
+    = f.number_field :auction_time, class: 'form-control', id: 'time', min: '0', placeholder: 'Введите время в минутах'
+    %p#time_p.bg-info.text-center{hidden: true} 
   .actions
     = f.submit class: 'btn btn-primary'
     = link_to 'Back', root_path, class: 'btn btn-default'
