Add links; small changes

--- a/app/views/auctions/show.html.haml
+++ b/app/views/auctions/show.html.haml
@@ -9,6 +9,9 @@
         #lot.panel-collapse.collapse
           .panel-body
             %p
+              %strong ID:
+              = @auction.id
+            %p
               %strong Name:
               = @auction.name
             %p
