--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -22,6 +22,8 @@
           %ul.nav.navbar-nav
             %li
               = link_to 'Lots', root_path
+            %li
+              = link_to 'Channels', channels_path  
               %span.sr-only (current)
             %li= link_to 'Blacklist', banned_users_path
           %ul.nav.navbar-nav.navbar-right
