--- a/app/views/auctions/show.html.haml
+++ b/app/views/auctions/show.html.haml
@@ -30,6 +30,12 @@
               %strong Current price:
               = @auction.current_price
             %p
+              %strong End price:
+              = @auction.end_price
+            / %p
+            /   %strong Auction time:
+            /   = @auction.auction_time
+            %p
               %strong Channel:
               = @auction.channel
             %p
