Add rules to the channel (#38)
* #38: Added rules and associated functional to channel

* #38: Added alert to channels.coffee

--- a/app/views/auctions/_form.html.haml
+++ b/app/views/auctions/_form.html.haml
@@ -44,6 +44,8 @@
       %br
       %input.form-control#channel-link{placeholder: 'Введите username канала в виде @channelusername'}
       %br
+      %textarea.form-control#channel-rules{placeholder: 'Введите правила канала'}
+      %br
       %button.btn.btn-success#create-channel{type: 'button'} Сохранить новый канал
       %button.btn.btn-danger#cancel{type: 'button'} Отмена
   .actions
